Alignment correct, lower bar color fix, input box adjustment

--- a/style.css
+++ b/style.css
@@ -19,15 +19,30 @@ ul {
     padding: 0;
 }
 
+ul .botbar {
+    left: 0;
+}
+
 li {
     display: inline;
+}
+
+.topbar li {
     padding: 0 15px 0 0;
+}
+
+.botbar li {
+    padding: 0 25px 0 0;
 }
 
 .topbar {
     padding: 15px 0 0 15px;
 }
 .rtop {
+    float: right;
+    padding: 0 5px 0 0;
+}
+.GA {
     float: right;
     padding: 0 20px 0 0;
 }
@@ -82,8 +97,8 @@ img {
 
 .text input {
     padding: 10px 10px;
-    width: 460px;
-    height: 24px;
+    width: 560px;
+    height: 25px;
     border-style: solid;
     border-width: 1px;
     border-color: LightGray;
@@ -102,7 +117,7 @@ img {
 .ibcenter div {
     display: inline-block;
     text-align: left;
-    padding: 0 0 15px 15px;
+    padding: 0 0 15px 9px;
 }
 
 .ibcenter input {
@@ -111,4 +126,5 @@ img {
     color:#5F6368;
     background-color: #f2f2f2;
     border-width: 0px;
+    border-radius: 3px;
 }
